--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -6,7 +6,7 @@
             <div class="container pt-3">
                 <h2 class="jumbotron-heading">Hello there, I'm Lucas,</h2>
                 <p class="text-muted">A software developer based out of Dublin, Ireland. <br>
-                I am open to learning, prepared for the challenge of exercising new roles and activities with flexibility. I always try to keep myself updated, with the purpose of personal and professional improvement.</p>
+                Positive, authentic energy, dynamic, team worker, open to learning and prepared for the challenge of exercising new roles and activities with flexibility. I always try to keep myself updated, with the purpose of personal and professional improvement. Also, dogfather, coffeelover, and pizzalover.<br></p>
                 <img class="center rounded-circle" src="{% static 'profile2.jpeg'%}" height="250" />
                 <br><br>
                 <p class="text-muted">Have a project, idea or problem you'd like to discuss? <strong>Let's chat!</strong></p>
