--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -17,8 +17,13 @@
                             <h1 class="h2 mb-3 font-weight-normal">Login</h1>
                             <div class="form-group">
                                 <label for="exampleInputEmail1">Email address</label>
-                                <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required>
-                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                <small id="emailHelp" class="form-text text-muted">We'll never share your data with anyone else.</small>
+                                <div class="input-group flex-nowrap">
+                                    <div class="input-group-prepend">
+                                      <span class="input-group-text" id="addon-wrapping">@</span>
+                                    </div>
+                                    <input name="username" type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping" required>
+                                  </div>
                             </div>
                             <label for="inputPassword" class="sr-only">Password</label>
                             <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required><br>
