--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -3,6 +3,15 @@
 {% block content %}
     <main class="pt-5 bg-light" role="main">
         <div class="album container col-9">
+            {% if messages %}
+                {% for message in messages %}
+                <span class="p-3">
+                    <div class="text-center alert alert-{{ message.tags }}">
+                        {{ message }}
+                    </div>
+                </span>
+                {% endfor %}
+            {% endif %}
             <h1 class="pt-3 text-center">{{ blog.title }}</h1>
             <span class="text-right">
             <p class="text-right">
@@ -11,7 +20,7 @@
                 <a href="javascript:{document.getElementById('upvote').submit()}" title="Like"><i class="far fa-thumbs-up text-dark btn p-0">{{ blog.votes }}</i></a>
                 {% if user.is_authenticated %} |
                 <a href="{% url 'update' blog.id %}" title="Edit"><i class="far fa-edit text-dark btn p-0"></i></a> |
-                <a href="{% url 'delete' blog.id %}" title="Delete"><i class="far fa-trash-alt text-dark btn p-0"></i></a>
+                <a href="{% url 'delete' blog.id %}" title="Delete"><i class="far fa-trash-alt text-dark btn p-0 delete"></i></a>
                 {% endif %}
             </p>
             </span>
