--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -27,21 +27,50 @@
             </div>
         </section>
 
-        <div class="album p-3 bg-light">
+        <div class="album py-3 bg-light">
             <div class="container">
                 <div class="row">
-                {% for job in jobs.all %}
-                    <div class="col-md-3">
-                        <a href="{{ job.site }}" class="text-muted text-center" target="_blank">
-                            <div class="card mb-3 shadow-sm bg-light rounded grow">
-                                <img class="bd-placeholder-img card-img-top" width="100%" height="175" src="{{ job.image.url }}" role="img">
+                    {% for job in jobs %}
+                    <!-- Card trigger modal -->
+                    <div class="col-md-4">
+                        <div class="card-deck mb-4 rounded">
+                            <div class="card" data-toggle="modal" data-target="#modalCenter">
+                                <img class="card-img-top" width="100%" height="200" src="{{ job.image.url }}">
+                                <div class="overlay">
+                                    <div class="text">
+                                        <h2>See more.</h2>
+                                    </div>
+                                </div>
                                 <div class="card-body">
-                                    <p class="card-text"><small><strong>{{ job.title }}</strong></small></p>
+                                    <p class="card-title text-center"><small><strong>{{ job.title }}</strong></small></p>
                                 </div>
                             </div>
-                        </a>
+                        </div>
                     </div>
-                {% endfor %}
+                    <!-- Modal -->
+                    <div class="modal fade" id="modalCenter" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="modalTitle">{{ job.title }}</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <p><strong>Summary:</strong> {{ job.summary }}</p>
+                                    <p><strong>Challenges:</strong> {{ job.challenge }}</p>
+                                    <p><strong>Team:</strong> {{ job.team }}</p>
+                                    <p><strong>Published:</strong> {{ job.pub_date }}</p>
+                                    <p><strong>Site: </strong><a href="{{ job.site }}" class="text-reset" target="_blank">{{ job.site }}</a></p>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
