--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -33,8 +33,8 @@
                     {% for job in jobs %}
                     <!-- Card trigger modal -->
                     <div class="col-md-4">
-                        <div class="card-deck mb-4 rounded">
-                            <div class="card" data-toggle="modal" data-target="#modalCenter">
+                        <div class="card-deck rounded">
+                            <div class="card" data-toggle="modal" data-target="#modal-summary">
                                 <img class="card-img-top" width="100%" height="200" src="{{ job.image.url }}">
                                 <div class="overlay">
                                     <div class="text">
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                     <!-- Modal -->
-                    <div class="modal fade" id="modalCenter" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
+                    <div class="modal fade" id="modal-summary" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
