--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -12,7 +12,7 @@
             </form>
             <hr>
         </div>
-        <div class="album py-5 bg-light pt-5">
+        <div class="album py-5 pt-5">
             <div class="container">
                 <div class="row">
                     <div class="card-columns rounded">
