--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -26,6 +26,7 @@
                                     <h6 class="card-title">{{ blog.title | safe }}</h6>
                                     <p class="card-text">{{ blog.summary | safe }}</p>
                                     <p class="card-text"><small class="text-muted">{{ blog.pub_date }} | {{ blog.writer }}</small></p>
+                                    <p class="card-text"><small class="text-muted"><i class="far fa-thumbs-up text-dark btn btn-sm p-0"></i> {{ blog.votes }}</small></p>
                                 </div>
                             </div>
                         </a>
