--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -34,7 +34,7 @@
                     <!-- ard trigger modal -->
                     <div class="col-md-4">
                         <div class="card-deck">
-                            <div class="card" data-toggle="modal" data-target="#myModal{{ job.id }}">
+                            <div class="card" data-toggle="modal" data-target="#jobModal{{ job.id }}">
                                 <img class="card-img-top" width="100%" height="200" src="{{ job.image.url }}"/>
                                 <div class="card-body">
                                 <p class="card-title text-center"><strong>{{ job.title }}</strong></p>
@@ -48,20 +48,24 @@
                         </div>
                     </div>
                     <!-- Modal -->
-                    <div class="modal fade" id="myModal{{ job.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal fade" id="jobModal{{ job.id }}" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalCenterTitle">{{ job.title }}</h5>
+                            <h5 class="modal-title" id="modalTitle">{{ job.title }}</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                             </div>
                             <div class="modal-body">
-                            ...
+                                <p><strong>Summary:</strong> {{ job.summary }}</p>
+                                <p><strong>Challenges:</strong> {{ job.challenge }}</p>
+                                <p><strong>Team:</strong> {{ job.team }}</p>
+                                <p><strong>Published:</strong> {{ job.pub_date }}</p>
+                                <p><strong>Site: </strong><a href="{{ job.site }}" class="text-reset" target="_blank">{{ job.site }}</a></p>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal">Close</button>
                             </div>
                         </div>
                         </div>
